Center menu, change logo size on smaller resolutions. Fix menu button disposition.

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,10 @@ html {
   display: none;
 }
 
+.menu {
+  text-align: left;
+}
+
 .menu a {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
@@ -423,6 +427,12 @@ a.btn_up:hover {
   }
   .top_header span {
     font-size: 11px;
+  }
+  .logo {
+    font-size: 20px;
+  }
+  .logo span.second {
+    font-size: 19px;
   }
   .about_text {
     max-width: 90%;
